change images and fix layout spacing

--- a/css/custom.css
+++ b/css/custom.css
@@ -108,8 +108,8 @@
 }
 
 #shelter-login-button{
-   bottom:0;
-   position:absolute;
+   bottom:-3rem;
+   position:relative;
 
 }
 
